--- a/css/main.css
+++ b/css/main.css
@@ -326,6 +326,9 @@ button {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
 
 address {
@@ -393,7 +396,7 @@ address {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -480,6 +483,15 @@ address {
   font-size: 44px;
   line-height: 1.3636363636;
   letter-spacing: 0.06em;
+}
+@media screen and (max-width: 1199px) {
+  .primary-title {
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.6153846154;
+    letter-spacing: 0.06em;
+    width: 360px;
+  }
 }
 
 .secondary-title {
@@ -1002,13 +1014,18 @@ address {
   margin: 0 auto;
   -ms-flex-line-pack: center;
       align-content: center;
-  max-width: 1600px;
+  max-width: 100%;
   height: 600px;
   text-align: center;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+}
+@media screen and (max-width: 767px) {
+  .hero {
+    height: 400px;
+  }
 }
 
 .hero-container {
@@ -1053,9 +1070,21 @@ address {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+@media screen and (max-width: 767px) {
+  .benefits__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
 
 .benefits__item {
   max-width: 270px;
+}
+@media screen and (max-width: 767px) {
+  .benefits__item {
+    max-width: 100%;
+  }
 }
 
 .benefits__image {
@@ -1068,9 +1097,9 @@ address {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 270px;
+  width: 100%;
   height: 120px;
-  background-color: #f5f4fa;
+  background-color: #0f0f0f;
   border-radius: 4px;
 }
 
