--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -6,18 +6,27 @@
 
 .benefits__list {
   @include flex-centred($jc: space-between);
+
+  @media screen and (max-width: 767px) {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .benefits__item {
   max-width: 270px;
+
+  @media screen and (max-width: 767px) {
+    max-width: 100%;
+  }
 }
 
 .benefits__image {
   @include flex-centred();
-  width: 270px;
+  width: 100%;
   height: 120px;
 
-  background-color: #f5f4fa;
+  background-color: #0f0f0f;
   border-radius: 4px;
 }
 
