--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,7 +2,7 @@
   @include flex-centred();
   margin: 0 auto;
   align-content: center;
-  max-width: 1600px;
+  max-width: 100%;
   height: 600px;
   text-align: center;
 
@@ -11,6 +11,10 @@
 
   background-size: cover;
   background-repeat: no-repeat;
+
+  @media screen and (max-width: 767px) {
+    height: 400px;
+  }
 }
 
 .hero-container {
