--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,13 +14,13 @@
     min-height: 400px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero-mob.jpg);
+      url(../images/hero-mob.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       min-height: 400px;
 
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero-mob-2x.jpg);
+        url(../images/hero-mob-2x.jpg);
     }
   }
 
@@ -28,13 +28,13 @@
     min-height: 400px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero-tabl.jpg);
+      url(../images/hero-tabl.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       min-height: 400px;
 
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero-tabl-2x.jpg);
+        url(../images/hero-tabl-2x.jpg);
     }
   }
 
@@ -42,13 +42,13 @@
     min-height: 600px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero-desk.jpg);
+      url(../images/hero-desk.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       min-height: 600px;
 
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero-desk-2x.jpg);
+        url(../images/hero-desk-2x.jpg);
     }
   }
 }
