--- a/sass/components/_top-text.scss
+++ b/sass/components/_top-text.scss
@@ -1,7 +1,7 @@
 .top-text {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1, 14285;
+  line-height: 1.1428;
   letter-spacing: 0.03em;
 
   text-transform: uppercase;
