--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,14 +4,14 @@
   padding-right: 15px;
 
   @media screen and (min-width: 320px) {
-    min-width: 320px;
+    max-width: 500px;
   }
 
   @media screen and (min-width: 768px) {
-    min-width: 768px;
+    max-width: 900px;
   }
 
   @media screen and (min-width: 1200px) {
-    min-width: 1200px;
+    width: 1200px;
   }
 }
