--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,8 +5,13 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
 
   transition: visibility var(--transition), opacity var(--transition);
+
+  @media screen and (max-width: 767px) {
+    padding: 94px 15px 0;
+  }
 }
 
 .modal {
@@ -15,19 +20,46 @@
 
   @include flex-centred();
   flex-direction: column;
-  text-align: center;
-  width: 530px;
+  width: 100%;
   padding: 40px;
 
-  background: #ffffff;
+  text-align: center;
+
+  background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
   transition: transform var(--transition) 200ms;
 
-  .backdrop.is-hidden & {
-    transform: translate(-50%, -50%) scale(0);
+  @media screen and (min-width: 320px) {
+    max-width: 450px;
+
+    .backdrop.is-hidden & {
+      transform: scale(0);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    @include position(absolute, 50%, 50%);
+    transform: translate(-50%, -50%) scale(1);
+
+    max-width: 450px;
+
+    .backdrop.is-hidden & {
+      transform: translate(-50%, -50%) scale(0);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include position(absolute, 50%, 50%);
+    transform: translate(-50%, -50%) scale(1);
+
+    max-width: 530px;
+
+    .backdrop.is-hidden & {
+      transform: translate(-50%, -50%) scale(0);
+    }
   }
 }
 
@@ -35,17 +67,25 @@
   margin-bottom: 30px;
 
   font-weight: 700;
-  font-size: 20px;
-  line-height: 1, 15;
   letter-spacing: 0.03em;
 
   &--black {
     color: var(--title-color);
   }
+
+  @media screen and (min-width: 320px) {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 20px;
+    line-height: 1.15;
+  }
 }
 
 .modal__form {
-  width: 450px;
+  width: 100%;
 }
 
 .modal_form-field {
@@ -62,8 +102,6 @@
   outline: transparent;
 
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1, 14285;
   letter-spacing: 0.01em;
 
   transition: border-color var(--transition);
@@ -74,11 +112,32 @@
 
   &::placeholder {
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1, 14285;
     letter-spacing: 0.01em;
 
     color: rgba(33, 33, 33, 0.374);
+  }
+
+  @media screen and (min-width: 320px) {
+    font-size: 12px;
+    line-height: 1.1666;
+
+    &::placeholder {
+      font-size: 12px;
+      line-height: 1.1666;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.1428;
+
+    &::placeholder {
+      font-size: 14px;
+      line-height: 1.1428;
+    }
   }
 }
 
@@ -87,7 +146,7 @@
 
   font-weight: inherit;
   font-size: 12px;
-  line-height: 1, 16666;
+  line-height: 1.1666;
   letter-spacing: 0.01em;
 
   color: #757575;
@@ -102,7 +161,7 @@
 }
 
 .modal__icon {
-  @include position($t: 11px, $l: 12px);
+  @include position($t: 9px, $l: 12px);
   transition: fill var(--transition);
 
   .modal__input:focus ~ & {
@@ -113,7 +172,7 @@
 .modal__textarea-container {
   position: relative;
 
-  width: 450px;
+  width: 100%;
 }
 
 .modal__textarea {
@@ -135,7 +194,7 @@
   &::placeholder {
     font-weight: 400;
     font-size: 14px;
-    line-height: 1, 14285;
+    line-height: 1.1428;
     letter-spacing: 0.01em;
 
     color: rgba(33, 33, 33, 0.374);
@@ -147,10 +206,17 @@
 
   font-weight: inherit;
   font-size: 14px;
-  line-height: 1, 71428;
+  line-height: 1.7142;
   letter-spacing: 0.03em;
 
   color: #757575;
+
+  @media screen and (min-width: 320px) {
+    flex-wrap: wrap;
+
+    font-size: 12px;
+    line-height: 1.1666;
+  }
 }
 
 .modal__checkbox-container {
@@ -178,6 +244,8 @@
 .checkbox__link {
   margin-left: 3px;
 
+  font-size: inherit;
+  line-height: inherit;
   text-decoration: underline;
 
   color: var(--accent-color);
