--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -5,7 +5,7 @@
 }
 
 .benefits__list {
-  @include flex-centred($ai: baseline, $jc: space-between);
+  @include flex-centred($ai: baseline);
 
   @media screen and (min-width: 320px) {
     flex-wrap: wrap;
@@ -16,7 +16,7 @@
 
 .benefits__item {
   @media screen and (min-width: 320px) {
-    width: inherit;
+    max-width: 500px;
   }
 
   @media screen and (min-width: 768px) {
@@ -30,35 +30,37 @@
 
 .benefits__image {
   @include flex-centred();
-  width: 100%;
   height: 120px;
 
   background-color: #0f0f0f;
   border-radius: 4px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 450px;
+  }
 }
 
 .benefits__top-text {
+  display: block;
   margin-top: 30px;
   margin-bottom: 10px;
 
   color: var(--title-color);
 
   @media screen and (min-width: 320px) {
-    display: block;
-
     text-align: center;
   }
 
   @media screen and (min-width: 768px) {
-    display: block;
-
     text-align: start;
   }
 }
 
 .benefits__text {
+  max-width: 450px;
+
   font-weight: inherit;
   font-size: 14px;
-  line-height: 1, 71428;
+  line-height: 1.7142;
   letter-spacing: 0.03em;
 }
