--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 4;
+  z-index: 3;
 
   @include flex-centred;
   width: 100%;
@@ -12,6 +12,8 @@
 }
 
 .header__container {
+  position: relative;
+
   @include flex-centred();
 
   @media screen and (min-width: 320px) {
@@ -123,30 +125,26 @@
   }
 }
 
-.header-mobile-menu__icon {
+.mobile-menu__button-open {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 11px;
+  right: 11px;
+  border: none;
 
+  background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.mobile-menu__icon-open {
   fill: #000000;
 
   transition: fill var(--transition);
 
-  &:hover,
-  &:focus {
+  .mobile-menu__button-open:hover &,
+  .mobile-menu__button-open:focus & {
     fill: var(--accent-color);
-  }
-
-  @media screen and (min-width: 768px) {
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
   }
 }
