--- a/css/main.css
+++ b/css/main.css
@@ -601,93 +601,6 @@ address {
   background-color: transparent;
 }
 
-.backdrop {
-  z-index: 5;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  overflow-y: scroll;
-  -webkit-transition: visibility var(--transition), opacity var(--transition);
-  transition: visibility var(--transition), opacity var(--transition);
-}
-@media screen and (max-width: 767px) {
-  .backdrop {
-    padding: 94px 15px 0;
-  }
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-  padding: 40px;
-  text-align: center;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  -webkit-transition: -webkit-transform var(--transition) 200ms;
-  transition: -webkit-transform var(--transition) 200ms;
-  transition: transform var(--transition) 200ms;
-  transition: transform var(--transition) 200ms, -webkit-transform var(--transition) 200ms;
-}
-@media screen and (min-width: 320px) {
-  .modal {
-    max-width: 450px;
-  }
-  .backdrop.is-hidden .modal {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-}
-@media screen and (min-width: 768px) {
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
-    max-width: 450px;
-  }
-  .backdrop.is-hidden .modal {
-    -webkit-transform: translate(-50%, -50%) scale(0);
-            transform: translate(-50%, -50%) scale(0);
-  }
-}
-@media screen and (min-width: 1200px) {
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
-    max-width: 530px;
-  }
-  .backdrop.is-hidden .modal {
-    -webkit-transform: translate(-50%, -50%) scale(0);
-            transform: translate(-50%, -50%) scale(0);
-  }
-}
-
 .modal__title {
   margin-bottom: 30px;
   font-weight: 700;
@@ -946,6 +859,32 @@ address {
 
 .modal__subscription {
   margin: 0 auto;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 94px 15px 0;
+  overflow: scroll;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  position: relative;
+  max-width: 450px;
+  padding: 40px;
+  background-color: #ffffff;
+  text-align: center;
 }
 
 .close-button {
