--- a/css/main.css
+++ b/css/main.css
@@ -601,6 +601,40 @@ address {
   background-color: transparent;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  overflow-y: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 94px 15px 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  position: relative;
+  overflow-y: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 450px;
+  padding: 40px;
+  background-color: #ffffff;
+  text-align: center;
+}
+
 .modal__title {
   margin-bottom: 30px;
   font-weight: 700;
@@ -859,32 +893,6 @@ address {
 
 .modal__subscription {
   margin: 0 auto;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-  height: 100%;
-  padding: 94px 15px 0;
-  overflow: scroll;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.modal {
-  position: relative;
-  max-width: 450px;
-  padding: 40px;
-  background-color: #ffffff;
-  text-align: center;
 }
 
 .close-button {
