--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -65,6 +65,36 @@
 //   }
 // }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  overflow-y: scroll;
+
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 94px 15px 0;
+
+  background-color: rgba($color: #000000, $alpha: 0.2);
+}
+
+.modal {
+  position: relative;
+  overflow-y: scroll;
+
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
+  padding: 40px;
+
+  background-color: #ffffff;
+
+  text-align: center;
+}
+
 .modal__title {
   margin-bottom: 30px;
 
@@ -255,31 +285,4 @@
 
 .modal__subscription {
   margin: 0 auto;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  padding: 94px 15px 0;
-  overflow: scroll;
-
-  background-color: rgba($color: #000000, $alpha: 0.2);
-}
-
-.modal {
-  position: relative;
-
-  max-width: 450px;
-  padding: 40px;
-
-  background-color: #ffffff;
-
-  text-align: center;
 }
