--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,99 +1,96 @@
-// .backdrop {
-//   z-index: 5;
-//   @include position($pos: fixed, $t: 0, $l: 0);
-
-//   width: 100%;
-//   height: 100%;
-//   background: rgba(0, 0, 0, 0.2);
-//   overflow-y: scroll;
-
-//   transition: visibility var(--transition), opacity var(--transition);
-
-//   @media screen and (max-width: 767px) {
-//     display: flex;
-//     justify-content: center;
-//     padding: 94px 15px 0;
-//   }
-// }
-
-// .modal {
-//   // @include position(absolute, 50%, 50%);
-//   // transform: translate(-50%, -50%) scale(1);
-
-//   @include flex-centred();
-//   flex-direction: column;
-//   width: 100%;
-//   padding: 40px;
-
-//   text-align: center;
-
-//   background-color: #ffffff;
-//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-//     0px 2px 1px rgba(0, 0, 0, 0.2);
-//   border-radius: 4px;
-
-//   transition: transform var(--transition) 200ms;
-
-//   @media screen and (min-width: 320px) {
-//     max-width: 450px;
-
-//     .backdrop.is-hidden & {
-//       transform: scale(0);
-//     }
-//   }
-
-//   @media screen and (min-width: 768px) {
-//     @include position(absolute, 50%, 50%);
-//     transform: translate(-50%, -50%) scale(1);
-
-//     max-width: 450px;
-
-//     .backdrop.is-hidden & {
-//       transform: translate(-50%, -50%) scale(0);
-//     }
-//   }
-
-//   @media screen and (min-width: 1200px) {
-//     @include position(absolute, 50%, 50%);
-//     transform: translate(-50%, -50%) scale(1);
-
-//     max-width: 530px;
-
-//     .backdrop.is-hidden & {
-//       transform: translate(-50%, -50%) scale(0);
-//     }
-//   }
-// }
-
 .backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
   z-index: 5;
-  overflow-y: scroll;
+  @include position($pos: fixed, $t: 0, $l: 0);
 
-  display: flex;
-  justify-content: center;
   width: 100%;
   height: 100%;
-  padding: 94px 15px 0;
+  background: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
 
-  background-color: rgba($color: #000000, $alpha: 0.2);
+  transition: visibility var(--transition), opacity var(--transition);
+
+  @media screen and (max-width: 767px) {
+    display: flex;
+    justify-content: center;
+    padding: 94px 15px 0;
+  }
 }
 
 .modal {
-  position: relative;
-  overflow-y: scroll;
+  // @include position(absolute, 50%, 50%);
+  // transform: translate(-50%, -50%) scale(1);
 
-  display: flex;
+  @include flex-centred();
   flex-direction: column;
-  max-width: 450px;
+  width: 100%;
   padding: 40px;
 
-  background-color: #ffffff;
-
   text-align: center;
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transition: transform var(--transition) 200ms;
+
+  @media screen and (min-width: 320px) {
+    max-width: 450px;
+
+    .backdrop.is-hidden & {
+      transform: scale(0);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    @include position(absolute, 50%, 50%);
+    transform: translate(-50%, -50%) scale(1);
+
+    max-width: 450px;
+
+    .backdrop.is-hidden & {
+      transform: translate(-50%, -50%) scale(0);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include position(absolute, 50%, 50%);
+    transform: translate(-50%, -50%) scale(1);
+
+    max-width: 530px;
+
+    .backdrop.is-hidden & {
+      transform: translate(-50%, -50%) scale(0);
+    }
+  }
 }
+
+// .backdrop {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   z-index: 5;
+//   overflow-y: scroll;
+
+//   display: flex;
+//   width: 100%;
+//   height: 100%;
+//   padding: 94px 15px;
+
+//   background-color: rgba($color: #000000, $alpha: 0.2);
+// }
+
+// .modal {
+//   display: flex;
+//   flex-direction: column;
+//   max-width: 450px;
+//   height: 100%;
+//   padding: 40px;
+
+//   background-color: #ffffff;
+
+//   text-align: center;
+// }
 
 .modal__title {
   margin-bottom: 30px;
