--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -32,7 +32,7 @@
   @include flex-centred();
   height: 120px;
 
-  background-color: #0f0f0f;
+  background-color: #f5f4fa;
   border-radius: 4px;
 
   @media screen and (min-width: 768px) {
