--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -38,7 +38,7 @@
 
   font-weight: 500;
   font-size: 16px;
-  line-height: 1, 1875;
+  line-height: 1.1875;
   letter-spacing: 0.03em;
 
   &--black {
@@ -51,7 +51,7 @@
 
   font-weight: 400;
   font-size: 16px;
-  line-height: 1, 1875;
+  line-height: 1.1875;
   letter-spacing: 0.03em;
 }
 
