--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,6 +3,9 @@ body {
   color: var(--primery-text-color);
   margin: 0;
 }
+body.modal-open {
+  overflow: hidden;
+}
 
 main {
   @media screen and (min-width: 320px) {
