--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,7 +10,7 @@
 
   font-weight: 700;
   font-size: 16px;
-  line-height: 1, 875;
+  line-height: 1.875;
   letter-spacing: 0.06em;
 
   transition: background-color var(--transition), box-shadow var(--transition);
