--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,14 +6,14 @@
   @media screen and (min-width: 320px) {
     font-weight: 700;
     font-size: 24px;
-    line-height: 1, 16666;
+    line-height: 1.1666;
     letter-spacing: 0.03em;
   }
 
   @media screen and (min-width: 1200px) {
     font-weight: 700;
     font-size: 26px;
-    line-height: 1, 19230;
+    line-height: 1.1923;
     letter-spacing: 0.03em;
   }
 }
