--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,28 +1,16 @@
 .backdrop {
   z-index: 5;
   @include position($pos: fixed, $t: 0, $l: 0);
+  overflow-y: scroll;
 
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-  overflow-y: scroll;
 
   transition: visibility var(--transition), opacity var(--transition);
-
-  @media screen and (max-width: 767px) {
-    display: flex;
-    justify-content: center;
-    padding: 94px 15px 0;
-  }
 }
 
 .modal {
-  // @include position(absolute, 50%, 50%);
-  // transform: translate(-50%, -50%) scale(1);
-
-  @include flex-centred();
-  flex-direction: column;
-  width: 100%;
   padding: 40px;
 
   text-align: center;
@@ -34,19 +22,30 @@
 
   transition: transform var(--transition) 200ms;
 
+  padding: 40px;
+
+  background-color: #ffffff;
+
+  text-align: center;
+
   @media screen and (min-width: 320px) {
+    @include position($t: 69%, $l: 50%);
+    transform: translate(-50%, -50%);
+
     max-width: 450px;
+    width: calc(100% - 30px);
 
     .backdrop.is-hidden & {
-      transform: scale(0);
+      transform: translate(-50%, -50%) scale(0);
     }
   }
 
   @media screen and (min-width: 768px) {
-    @include position(absolute, 50%, 50%);
-    transform: translate(-50%, -50%) scale(1);
+    @include position($t: 88%, $l: 50%);
+    transform: translate(-50%, -50%);
 
     max-width: 450px;
+    width: 100%;
 
     .backdrop.is-hidden & {
       transform: translate(-50%, -50%) scale(0);
@@ -54,43 +53,17 @@
   }
 
   @media screen and (min-width: 1200px) {
-    @include position(absolute, 50%, 50%);
+    @include position($t: 50%, $l: 50%);
     transform: translate(-50%, -50%) scale(1);
 
     max-width: 530px;
+    width: 100%;
 
     .backdrop.is-hidden & {
       transform: translate(-50%, -50%) scale(0);
     }
   }
 }
-
-// .backdrop {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   z-index: 5;
-//   overflow-y: scroll;
-
-//   display: flex;
-//   width: 100%;
-//   height: 100%;
-//   padding: 94px 15px;
-
-//   background-color: rgba($color: #000000, $alpha: 0.2);
-// }
-
-// .modal {
-//   display: flex;
-//   flex-direction: column;
-//   max-width: 450px;
-//   height: 100%;
-//   padding: 40px;
-
-//   background-color: #ffffff;
-
-//   text-align: center;
-// }
 
 .modal__title {
   margin-bottom: 30px;
@@ -156,9 +129,6 @@
     }
   }
 
-  @media screen and (min-width: 768px) {
-  }
-
   @media screen and (min-width: 1200px) {
     font-size: 14px;
     line-height: 1.1428;
@@ -171,9 +141,9 @@
 }
 
 .modal__label {
-  @include position($t: -15px);
+  @include position($t: -17px);
 
-  font-weight: inherit;
+  font-weight: 400;
   font-size: 12px;
   line-height: 1.1666;
   letter-spacing: 0.01em;
@@ -186,6 +156,26 @@
   .modal__textarea:focus + & {
     visibility: visible;
     opacity: 1;
+  }
+
+  @media screen and (min-width: 320px) {
+    font-size: 12px;
+    line-height: 1.1666;
+
+    &::placeholder {
+      font-size: 12px;
+      line-height: 1.1666;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.1428;
+
+    &::placeholder {
+      font-size: 14px;
+      line-height: 1.1428;
+    }
   }
 }
 
@@ -233,9 +223,8 @@
 .checkbox__label {
   @include flex-centred();
 
-  font-weight: inherit;
-  font-size: 14px;
-  line-height: 1.7142;
+  font-weight: 400;
+
   letter-spacing: 0.03em;
 
   color: #757575;
@@ -245,6 +234,13 @@
 
     font-size: 12px;
     line-height: 1.1666;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: wrap;
+
+    font-size: 14px;
+    line-height: 1.7142;
   }
 }
 
