--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,10 +1,5 @@
 .navigation__list {
   @include flex-centred();
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1, 14285;
-  letter-spacing: 0.02em;
 }
 
 .navigation__item {
@@ -17,6 +12,11 @@
 
 .navigation__link {
   padding: 32px 0 32px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.02em;
 
   transition: color var(--transition);
 
