--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -4,7 +4,7 @@
   @media screen and (min-width: 320px) {
     font-weight: 900;
     font-size: 26px;
-    line-height: 1, 61538;
+    line-height: 1.6153;
     letter-spacing: 0.06em;
 
     max-width: 360px;
@@ -13,8 +13,10 @@
   @media screen and (min-width: 1200px) {
     font-weight: 900;
     font-size: 44px;
-    line-height: 1, 36363;
+    line-height: 1.3636;
     letter-spacing: 0.06em;
+
+    max-width: 696px;
   }
 }
 
@@ -25,14 +27,14 @@
   @media screen and (min-width: 320px) {
     font-weight: 700;
     font-size: 28px;
-    line-height: 1, 17857;
+    line-height: 1.1785;
     letter-spacing: 0.03em;
   }
 
   @media screen and (min-width: 1200px) {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1, 16666;
+    line-height: 1.1666;
     letter-spacing: 0.03em;
   }
 }
