--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -26,6 +26,10 @@
   @media screen and (min-width: 768px) {
     width: calc((100% - 60px) / 3);
   }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 150px) / 6);
+  }
 }
 
 .customers__image {
