--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,8 @@
   @include flex-centred;
   width: 100%;
   border-bottom: 1px solid #ececec;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 
   background-color: #ffffff;
 }
@@ -17,7 +19,17 @@
   @include flex-centred();
 
   @media screen and (min-width: 320px) {
-    width: inherit;
+    max-width: 500px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 900px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
   }
 }
 
@@ -53,16 +65,7 @@
 
 .header__navigation {
   @media screen and (max-width: 767px) {
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
+    display: none;
   }
 }
 
@@ -72,32 +75,26 @@
 
   font-weight: 500;
   font-size: 14px;
-  line-height: 1, 14285;
+  line-height: 1.1428;
   letter-spacing: 0.02em;
 
   @media screen and (max-width: 767px) {
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
+    display: none;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: block;
   }
 }
 
 .header-contacts__item {
-  & + & {
-    margin-left: 30px;
+  @media screen and (min-width: 1200px) {
+    & + & {
+      margin-left: 30px;
+    }
   }
 }
 .header-contacts__link {
-  @include flex-centred();
-  padding: 32px 0;
-
   transition: color var(--transition);
 
   &--gray {
@@ -107,6 +104,15 @@
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 5px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include flex-centred();
+    padding: 32px 0;
   }
 }
 
