--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,7 +1,9 @@
 .benefits {
-  padding-bottom: 0;
-
   background-color: #ffffff;
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
+  }
 }
 
 .benefits__list {
