--- a/css/main.css
+++ b/css/main.css
@@ -2229,6 +2229,12 @@ address {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .grid__item:first-child .grid__link .grid__discription {
+    height: 146px;
+  }
+}
+
 .grid__text {
   -webkit-transition: top var(--transition);
   transition: top var(--transition);
